--- a/templates/admin/form/index.html.twig
+++ b/templates/admin/form/index.html.twig
@@ -41,15 +41,10 @@
                 <div class="card card-body">
                     <h4 class="header-title">File</h4>
                     {{ form_row(form.image) }}
-                    {% if form.image.vars.value %}
-                        <div class="alert alert-info d-flex align-items-center">
-                            <a href="{{ form.image.vars.value | file_url }}" class="me-2">
-                                <img src="{{ form.image.vars.value | image_url('thumbnail') }}" class="img-thumbnail">
-                            </a>
-                            <div>Umbrella file can be displayed with liip/imaginebundle :)</div>
-                        </div>
-                    {% endif %}
-                    {{ form_row(form.pdf) }}
+                    <div class="alert alert-info">
+                        Check <a href="https://github.com/dustin10/VichUploaderBundle" target="_blank">VichUploaderBundle</a> documentation for File upload usage.<br>
+                        Only the theme of VichFileType / VichImageType is overriden by Umbrella form theme.
+                    </div>
                 </div>
 
                 <div class="card card-body">
