--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -6,7 +6,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
         <title>Framework Umbrella | Admin framework based on symfony 5</title>
-        <meta content="Intuitive framwork to create a beautiful backends for your application." name="description" />
+        <meta content="Framework to create administration backends on symfony 5." name="description" />
         <meta content="Adrien Cantepie" name="author" />
 
         {{ encore_entry_link_tags('front') }}
@@ -58,9 +58,9 @@
                                     <i class="mdi mdi-layers-outline text-primary font-24"></i>
                                 </span>
                             </div>
-                            <h4 class="mt-3">Beautiful Admin theme</h4>
+                            <h4 class="mt-3">Bootstrap 5 Admin theme</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Use admin bootstrap5 sass theme packaged with webpack</a>.
+                                Use beautiful Hyper admin bootstrap theme (dark/light variant).
                             </p>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                             </div>
                             <h4 class="mt-3">Symfony 5 / php 7.4</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Developed with Symfony framwork.
+                                Developed with latest Symfony and PHP version.
                             </p>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                             </div>
                             <h4 class="mt-3">DataTable / TreeTable</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Based on <a href="https://datatables.net/" class="text-primary">DataTable.js</a> using same logic as Symfony forms (Type, OptionsResolver, Builder, ...)
+                                Create complex and dynamic admin view with DataTable component (based on <a href="https://datatables.net/" class="text-primary">DataTable.js</a>).
                             </p>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                             </div>
                             <h4 class="mt-3">Menu</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Inspired by <a href="https://github.com/KnpLabs/KnpMenuBundle" class="text-primary">KnpMenuBundle</a>. Build it like Symfony config definitions (TreeBuilder), supports security features.
+                                Configure your menu / breadcrumb with a single yaml file.
                             </p>
                         </div>
                     </div>
@@ -116,9 +116,9 @@
                                     <i class="mdi mdi-form-select text-primary font-24"></i>
                                 </span>
                             </div>
-                            <h4 class="mt-3">Add many FormTypes</h4>
+                            <h4 class="mt-3">Add some useful form fields</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Select2Type, Entity2Type, AsyncEntity2Type, TagType, CollectionType and more ...
+                                Add Select, Date / DateTime, FileUpload, Ckeditor (and more) form Theme / Type.
                             </p>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                             </div>
                             <h4 class="mt-3">And more ...</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Handle upload using flysytem, Notifications, Manage user, <b>Maker</b> commands...
+                                Notifications system, User management, Maker commands...
                             </p>
                         </div>
                     </div>
