Update Maker note

--- a/templates/admin/default/about.html.twig
+++ b/templates/admin/default/about.html.twig
@@ -59,7 +59,7 @@
                     <strong>User management</strong> : Admin view to edit admin user, Profile view to edit your own account and security system to login and recover password.
                 </li>
                 <li class="pb-2">
-                    <strong>Maker</strong> : Inspired by <a href="https://symfony.com/doc/current/bundles/SymfonyMakerBundle/index.html" class="text-primary">MakerBundle symfony</a>, helps you to create controller, form with DataTable view.
+                    <strong>Maker</strong> : Create table <code>php bin/console make:table</code> and tree <code>php bin/console make:tree</code> view with Maker command.
                 </li>
                 <li class="pb-2">
                     <strong>Notification manager</strong> : Lightweight notification system.
