--- a/templates/admin/menu/index.html.twig
+++ b/templates/admin/menu/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
                     <h4>How create your own <span class="text-primary">menu</span></h4>
@@ -32,7 +32,7 @@ services:
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
                     <h4>Umbrella Admin <span class="text-primary">menu</span></h4>
@@ -52,7 +52,7 @@ services:
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
                     <h4>Menu matcher</h4>
@@ -67,7 +67,7 @@ services:
             </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
                     <h4>Security</h4>
