--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -33,14 +33,14 @@
                                 Try yourself <i class="mdi mdi-arrow-right ms-1"></i>
                             </a>
 
-                            <div class="d-flex justify-content-center">
-                                <span class="me-2">
+                            <div class="row justify-content-md-center">
+                                <span class="col-md-auto">
                                    Code of demo app is available on <a href="https://github.com/acantepie/umbrella-admin-demo" class="text-primary">my github</a>.
                                 </span>
-                                <span class="me-2">
+                                <span class="col-md-auto">
                                     <a class="github-button" href="https://github.com/acantepie" aria-label="Follow @acantepie on GitHub">Follow @acantepie</a>
                                 </span>
-                                <span>
+                                <span class="col-md-auto">
                                     <a class="github-button" href="https://github.com/acantepie/umbrella" data-icon="octicon-star" aria-label="Star acantepie/umbrella on GitHub">Star</a>
                                 </span>
                             </div>
