--- a/templates/admin/umbrella-config/index.html.twig
+++ b/templates/admin/umbrella-config/index.html.twig
@@ -6,7 +6,7 @@
         <div class="card-body">
             {% for config in configs %}
                 <h4 class="card-title">{{ config.name }}</h4>
-                <pre class="border-dark border p-2">{{ config.dump }}</pre>
+                <hl-code class="language-yaml">{{ config.dump }}</hl-code>
             {% endfor %}
 
         </div>
