--- a/templates/admin/form/index.html.twig
+++ b/templates/admin/form/index.html.twig
@@ -6,7 +6,7 @@
 
         <div class="d-flex mb-3">
             <button type="submit" class="btn btn-primary ms-auto">
-                <i class="mdi mdi-check"></i> {{ 'action.save' | trans }}
+                <i class="mdi mdi-check"></i> {{ 'Save' | trans }}
             </button>
         </div>
 
