--- a/templates/admin/notification/index.html.twig
+++ b/templates/admin/notification/index.html.twig
@@ -12,7 +12,7 @@
                 {{ form_rest(form) }}
 
                 <button type="submit" class="btn btn-primary">
-                    <i class="mdi mdi-send"></i> {{ 'action.send' | trans }}
+                    <i class="mdi mdi-send"></i> {{ 'Send' | trans }}
                 </button>
 
             </form>
