--- a/templates/admin/default/about.html.twig
+++ b/templates/admin/default/about.html.twig
@@ -30,7 +30,7 @@
                     Uses the same principle as Symfony FormT(Factory, Builder, Type) and supports a lot of features (Async loading, Tree view, Custom adapter, Form filter, ...)
                 </li>
                 <li class="pb-2">
-                    <strong>Menu / Breadcrumb</strong> : Menu / breadcrumb creation component inspired by <a href="https://github.com/KnpLabs/KnpMenuBundle" class="text-primary">KnpMenuBundle</a>.
+                    <strong>Menu / Breadcrumb</strong> : Menu / breadcrumb creation component.
                 </li>
                 <li class="pb-2">
                     <strong>Form</strong> : Add some useful FormType and theme - Choice2Type / Entity2Type (select2), AutoCompleteType (select2 with async loading), DatePicker / DateTimepicker,  Collection, Ckeditor, ...
