Menu / add badge / add breadcrumb doc

--- a/templates/admin/menu/index.html.twig
+++ b/templates/admin/menu/index.html.twig
@@ -36,6 +36,21 @@
 
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-header">
+                    <h4>Customize breadcrumb on admin page</h4>
+                </div>
+                <div class="card-body">
+                    <p>
+                        On your admin page view, you can use a twig function to update the breadcrumb.
+                    </p>
+
+                    <hl-code class="language-twig">{{  source('admin/menu/_breadcrumb.txt') }}</hl-code>
+
+                </div>
+            </div>
+
         </div>
     </div>
 
