--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -61,7 +61,7 @@
                             </div>
                             <h4 class="mt-3">Bootstrap 5 Admin theme</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Use beautiful Hyper admin bootstrap theme (dark/light variant).
+                                Use beautiful Hyper admin bootstrap theme.
                             </p>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                             </div>
                             <h4 class="mt-3">Menu</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Configure your menu / breadcrumb with a single yaml file.
+                                Configure menu you need with one PHP file.
                             </p>
                         </div>
                     </div>
