--- a/templates/admin/js/index.html.twig
+++ b/templates/admin/js/index.html.twig
@@ -151,7 +151,7 @@
 
             <h5>Handle action on JavaScript - jsResponseHandler</h5>
             <p>
-                Each action type is handled by a class that extends <b>JsResponseAction</b> or a function.
+                Each type of action is handled by a function.
                 The following code handle action of type 'toast' :
             </p>
 
