--- a/templates/admin/default/about.html.twig
+++ b/templates/admin/default/about.html.twig
@@ -56,7 +56,7 @@
                     <strong>User management</strong> : Admin view to edit admin user, Profile view to edit your own account and security system to login and recover password.
                 </li>
                 <li class="pb-2">
-                    <strong>Maker</strong> : Create table <code>php bin/console make:table</code> and tree <code>php bin/console make:tree</code> view with Maker command.
+                    <strong>Maker</strong> : Create table <code>php bin/console make:admin:table</code> and tree <code>php bin/console make:admin:tree</code> view with Maker command.
                 </li>
                 <li class="pb-2">
                     <strong>Notification manager</strong> : Lightweight notification system.
